# misa-bot

./: .env.example  .gitignore  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  db.py  groups.py  lavalink_voice.py  listing_stats.py  load.py
bot/core/: bot.py  model.py
bot/plugins/: activity.py  info.py  localize.py  settings.py  welcome.py
bot/plugins/handlers/: errors.py  notifications.py
bot/plugins/music/: additional.py  base.py  basic.py  force_stop.py
locale/en/: music.yml
locale/ru/: generic.yml  music.yml
